CU-183: Fix alignment on mega nav feature text

--- a/docroot/themes/custom/cu2019_grad/src/sass/structure/header/navs/_mega-menu.scss
+++ b/docroot/themes/custom/cu2019_grad/src/sass/structure/header/navs/_mega-menu.scss
@@ -202,7 +202,7 @@ nav.mega {
             }
 
             .mega_content {
-                @include flex(flex-start, center, center);
+                //@include flex(flex-start, center, center);
                 width: 36%;
                 color: $gray2;
                 background: $accent-1;
